--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: sudoku_dart
+name: dartdoku
 description: A sample command-line application.
 # version: 1.0.0
 # homepage: https://www.example.com
