--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: dartdoku
 description: A sample command-line application.
-# version: 1.0.0
-# homepage: https://www.example.com
+version: 1.0.0
+homepage: https://hello.rusondia.net
 
 environment:
   sdk: '>=2.12.1 <3.0.0'
